--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
                 <h3 class="title">contact info</h3>
 
                 <div class="info">
-                    <h3> <i class="fas fa-envelope"></i> <pre>sujeetgund@gmail.com</pre> </h3>
+                    <h3> <i class="fas fa-envelope"></i> <pre>admin@sujeetgund.tech</pre> </h3>
                     <h3><i class="fab fa-instagram"></i><a href="https://instagram.com/sujeet.gund/" style="color: azure;">Instagram</a> </h3>
                     <h3><i class="fab fa-facebook"></i> <a href="https://facebook.com/sujeet.gund.98"style="color: azure;">Facebook</a></h3>
                     <h3> <i class="fas fa-phone"></i> +91 7620420850 </h3>
-                    <h3> <i class="fas fa-phone"></i> +111-222-3333 </h3>
+<!--                     <h3> <i class="fas fa-phone"></i> +111-222-3333 </h3> -->
                     <h3> <i class="fas fa-map-marker-alt"></i> Barshi, india - 413401. </h3>
                 </div>
 
